thrasyboulos/hydor/overlays/hellas/alexandreia/eupalinos/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eupalinos
spec:
  replicas: 1
  serviceName: eupalinos
  selector:
    matchLabels:
      app: eupalinos
  template:
    metadata:
      labels:
        app: eupalinos
        release: eupalinos
        version: v0.3.1
      annotations:
        perikles/hostname: "eupalinos"
        perikles/validity: "60"
    spec:
      terminationGracePeriodSeconds: 3
      containers:
        - name: eupalinos
          image: ghcr.io/odysseia-greek/eupalinos:v0.3.1
          ports:
            - name: grpc
              containerPort: 50060
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
