thrasyboulos/hydor/overlays/hellas/alexandreia/eupalinos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eupalinos
spec:
  selector:
    app: eupalinos
  ports:
    - name: grpc
      port: 50060
      targetPort: grpc
